--- a/scripts/map-template-leaflet.html
+++ b/scripts/map-template-leaflet.html
@@ -160,7 +160,7 @@
                     lon: city.lon,
                     koppen: city.koppen,
                     url: city.url,
-                    url1: city.url1
+                    url1: city.url1,
                     distance: haversineDistance(lat, lon, city.lat, city.lon),
                     match: city.koppen === koppen
                 };
