--- a/scripts/map-template-leaflet.html
+++ b/scripts/map-template-leaflet.html
@@ -159,13 +159,13 @@
         };
 
         var shapefiles = [
-            { path: "MISO_Market_Zones.zip", color: "blue", name: "MISO"},
-            { path: "ercot_load_zones_shp.zip", color: "green", name: "ERCOT"},
-            { path: "spp_market_zones.zip", color: "red", name: "SPP"},
-            { path: "nyiso_load_zones.zip", color: "purple", name: "NYISO"},
-            { path: "NE_load_zones.zip", color: "orange", name: "ISONE"},
-            { path: "pjm_loadzones_shp.zip", color: "yellow", name: "PJM"},
-            { path: "WPP_view.zip", color:"gray", name:"CAISO"}
+            { path: "scripts/MISO_Market_Zones.zip", color: "blue", name: "MISO"},
+            { path: "scripts/ercot_load_zones_shp.zip", color: "green", name: "ERCOT"},
+            { path: "scripts/spp_market_zones.zip", color: "red", name: "SPP"},
+            { path: "scripts/nyiso_load_zones.zip", color: "purple", name: "NYISO"},
+            { path: "scripts/NE_load_zones.zip", color: "orange", name: "ISONE"},
+            { path: "scripts/pjm_loadzones_shp.zip", color: "yellow", name: "PJM"},
+            { path: "scripts/WPP_view.zip", color:"gray", name:"CAISO"}
         ];
 
         var zoneGroup = L.layerGroup(); 
