--- a/scripts/map-template-leaflet.html
+++ b/scripts/map-template-leaflet.html
@@ -187,6 +187,7 @@
         });
 
         zoneGroup.addTo(map);
+        zoneGroup.bringToBack();
 
 
         //clear highlights when popup closes
